--- a/quiz-1.html
+++ b/quiz-1.html
@@ -1,49 +1,28 @@
 ﻿<!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8">
-    <title>연습문제 1</title>
-    <style>
-			.container {
-				width:500px;
-				padding:10px;
-				border:1px solid #ccc;
-			
-			}
-			.subject {
-				font-weight:700;
-				font-size:larger;
-				color : #ad3000;
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>연습문제 1</title>
+	<style>	
+		#container {
+			width:350px;
+			margin:30px auto;
+		}
 
-			
-			}
-			ul{
-				list-style-type: none;
+		img{
 
-			}
-			li{
-
-					line-height: 2.0;				
-			}
-
-
-    </style>
-  </head>
-  <body>
-		<div class="container">
-			<h1>최신 웹 디자인 트렌드</h1>
-		 
-			<ul>
-			<li><span class="subject">반응형 웹 디자인</span> - 다양한 화면 크기에 최적화하다</li>
-			<li><span class="subject">플랫 디자인 </span> - 입체에서 평면으로 </li>
-			<li><span class="subject">풀스크린 배경 </span> - 콘텐츠에 집중</li>
-			<li><span class="subject">원 페이지 사이트 </span> - 한 페이지에 모든 내용을 담다</li>
-			<li><span class="subject">패럴랙스 스크롤링 </span> - 동적인 효과로 강한 인상을!</li>
-			<li><span class="subject">웹 폰트 </span> - 웹 타이포그래피를 받쳐주는 기술</li>
-		</ul>
-
-
+			border : 1px solid #ccc;
+			border-radius: 50%;
+			box-shadow: 5px 5px 30px 2px #000;
+	
+		}
 		
-		</div>
-  </body>
+	</style>
+</head>
+<body>
+<div id="container">
+	<img src="images/bear.jpg" alt="곰인형 사진">
+
+</body>
 </html>
