--- a/quiz-3.html
+++ b/quiz-3.html
@@ -1,57 +1,48 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
-<head>
-	<meta charset="UTF-8">
-	<title>연습문제 3</title>
+	<head>
+		<meta charset="UTF-8">
+		<title>연습문제 3</title>
+		<style>
+
+			ul{
+
+				list-style: none;
+			}
+			a:link, a:visited {
+				color:black;
+				text-decoration: none;
+			}
+			a:hover {
+				background-color:#000;
+				color:#fff;
+			}
+
+			a {
+				display: block;
+				padding: 10px 20px;
+				background-color: #ccc;
+
+			}
 
 
-  <style>
-    table { 
-      border : 1px solid black;
-      border-collapse: collapse;
-      caption-side: bottom;
-     
-    }
-    td, th {
-      border: 1px solid black;
-      padding : 10px;
-    }
-    .heading{
-      background :#eee;
-    }
-  </style>
-   </head>
-    <body>
-      <table>
-    <caption>2019 국민 독서실태</caption>
-    <col class="heading">
-    <col>
-    <col>
-    <col>
-    <thead>
-      <tr class="heading">
-        <th>구분</th>
-        <th>성인</th>
-        <th>독서자</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>종이책</th>
-        <td>6.1권</td>
-        <td>11.8권</td>
-      </tr>
-      <tr>
-        <th>전자책</th>
-        <td>1.2권</td>
-        <td>7.1권</td>
-      </tr>
-      <tr>
-        <th>오디오북</th>
-        <td>0.2권</td>
-        <td>5.5권</td>
-      </tr>      
-    </tbody>
-  </table>
-</body>
+			ul li{
+
+					float : left;
+
+			}
+
+
+		</style>
+	</head>
+	<body>
+		<nav>		
+			<ul>
+				<li><a href="#">메뉴1</a></li>
+				<li><a href="#">메뉴2</a></li>
+				<li><a href="#">메뉴3</a></li>
+				<li><a href="#">메뉴4</a></li>
+			</ul>
+		</nav>
+	</body>
 </html>
