--- a/quiz-1.html
+++ b/quiz-1.html
@@ -1,28 +1,31 @@
 ﻿<!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>연습문제 1</title>
-	<style>	
-		#container {
-			width:350px;
-			margin:30px auto;
-		}
+  <meta charset="UTF-8">
+  <title>연습문제 1</title>  
+  <style>
+    img {
+      margin-right:50px;
+      border:1px solid #ccc;
+      box-shadow: 2px 2px 5px #ccc;
+    }
 
-		img{
+    img:first-of-type{
+      
+      border: 2px solid #f00
 
-			border : 1px solid #ccc;
-			border-radius: 50%;
-			box-shadow: 5px 5px 30px 2px #000;
-	
-		}
-		
-	</style>
+    }
+    
+
+
+
+
+
+  </style>
 </head>
 <body>
-<div id="container">
-	<img src="images/bear.jpg" alt="곰인형 사진">
-
+  <img src="images/1.jpg" alt="">
+  <img src="images/2.jpg" alt="">
+  <img src="images/3.jpg" alt="">
 </body>
 </html>
