--- a/quiz-2.html
+++ b/quiz-2.html
@@ -1,43 +1,55 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>연습문제 2</title>
-	<style>	
-		#container {
-			width:200px;
-			margin:30px auto;
+	<style>
+		body {
+			font-size:1.2em;
+			text-align:center;
 		}
-    img {
-      border:1px solid #ccc;
-      border-radius:50%;      
-      box-shadow: 5px 5px 30px 2px #000;
-			animation: rotateBear 2.5s infinite;
-    }
 
+		p {
 
-		@keyframes rotateBear {
-
-			from { transform: perspective(200px) rotateY(0deg);}
-			50%  {transform: perspective(200px) rotateY(-180deg);}
-			to { transform: perspective(200px) rotateY(-360deg);}	
+			color : #f00;
+			font-weight:  bold;
 
 
 		}
-
-
-	
-
 	</style>
 </head>
-
 <body>
+	<h2>3의 배수 찾기</h2>
 
 
-  <div id="container">
-	  <img src="images/bear.jpg" alt="곰인형 사진">
 
-  </div>
+<script>
+
+	var i;
+	var userNumber = prompt ("숫자를 입력하세요");
+	var count = 0;
+
+	if(userNumber !== null){
+
+		for(i = 1; i <= userNumber; i++)
+		{
+				if(i % 3 == 0)
+				{
+					count++;
+					document.write(i + "  ,  ");
+				}
+
+	}
+			document.write("<p> "  + userNumber + "까지 3의 배수의 갯수 : " + count + "</p>");
+}
+
+
+
+</script>
+
+
+
+
 </body>
 </html>
