--- a/quiz-2.html
+++ b/quiz-2.html
@@ -4,49 +4,115 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>연습문제 2</title>
+
 	<style>
-		body {
-			font-size:1.2em;
-			text-align:center;
+
+		form{
+
+
+
+	margin-bottom : 30px;
+		}
+		input[type="text"]{
+
+			width: 30px;
+			height: 20px;
+			text-align: center;
+
+		}
+		button {
+
+			margin-left: 10px;
+
 		}
 
-		p {
+		table{
 
-			color : #f00;
-			font-weight:  bold;
-
+			width: 300px;
 
 		}
-	</style>
+
+		table,td{
+
+
+			border: 1px solid #ccc;
+			border-collapse: collapse;
+
+		}
+
+		td{
+
+		padding: 10px;
+
+
+
+}
+</style>
 </head>
 <body>
-	<h2>3의 배수 찾기</h2>
+	
+		<form>
+			
+			
+		
+		
+
+			<input type="text" id="rCount" value="1">행
+			<input type="text" id="cCount" value="1">열
+			<button onclick="drawTable(); return false;">작성</button>
+
+			
+		</form>
+
+		<div id="contents"></div>
 
 
+		<script>
 
-<script>
+			function drawTable() {
 
-	var i;
-	var userNumber = prompt ("숫자를 입력하세요");
-	var count = 0;
-
-	if(userNumber !== null){
-
-		for(i = 1; i <= userNumber; i++)
-		{
-				if(i % 3 == 0)
+				var rCount = document.querySelector("#rCount").value;
+				var cCount = document.querySelector("#cCount").value;
+				
+				var newTable = document.createElement("table");
+				for(i=0; i<rCount; i++)
 				{
-					count++;
-					document.write(i + "  ,  ");
+					var newRow = document.createElement("tr");
+					for(j = 0; j< cCount; j++){
+
+						var newCell = document.createElement("td");
+						var cellText = document.createTextNode(i + ", " + j);
+						newCell.appendChild(cellText);
+						newRow.appendChild(newCell);
+					}
+
+					newTable.appendChild(newRow);
+
 				}
 
-	}
-			document.write("<p> "  + userNumber + "까지 3의 배수의 갯수 : " + count + "</p>");
-}
+				var contents = document.querySelector("#contents");
+				contents.appendChild(newTable);
+			
 
 
 
-</script>
+
+
+
+
+
+
+
+
+
+
+			}
+
+
+
+
+
+		</script>
 
 
 
